tests/valid/namedparams.nim
# Count: 1
# Negative count: 0

myProc(named = true)
