tests/invalid/namedparams.nim
# Count: 0
# Negative count: 1

quit(QuitSuccess)
